force-app/main/default/objects/Ticket_timer__c/Ticket_timer__c.object-meta.xml
<CustomObject>
    <label>Ticket timer</label>
    <nameField>
        <displayFormat>TIMER-{000000}</displayFormat>
        <label>Ticket timer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket timers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>