force-app/main/default/objects/Ticket_timer__c/fields/Actual_Elapsed_Time_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Elapsed_Time_in_Hours__c</fullName>
    <formula>Elapsed_Time_hour__c * 1440 / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>