force-app/main/default/objects/Ticket_timer__c/fields/Changed_value__c.field-meta.xml
<CustomField>
    <fullName>Changed_value__c</fullName>
    <label>Changed value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>