force-app/main/default/objects/Ticket_timer__c/fields/Elapsed_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Business_Hours__c</fullName>
    <label>Elapsed Business Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>