force-app/main/default/objects/Ticket_timer__c/fields/Elapsed_Time_hour__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_hour__c</fullName>
    <formula>IF(ISBLANK(Changed_value__c), NOW() - CreatedDate, LastModifiedDate -  CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>