force-app/main/default/objects/Ticket_timer__c/fields/Elapsed_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Minutes__c</fullName>
    <formula>Elapsed_Time_hour__c *1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>