force-app/main/default/objects/Ticket_timer__c/fields/Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value__c</fullName>
    <label>Prior Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>