force-app/main/default/objects/Ticket_timer__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <label>RelatedCase</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>NEW_KIND_Ticket_timers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>